config: composer add shopware to test (#1454)

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/migrations": "2.2.x",
         "egulias/email-validator": "^2.1",
-        "ergonode/exporter-shopware-6": "dev-main",
+        "ergonode/exporter-shopware-6": "dev-relation-attribute",
         "ergonode/importer-magento-1": "^1.0",
         "gesdinet/jwt-refresh-token-bundle": "^0.11.1",
         "guzzlehttp/guzzle": "^6.3",
@@ -187,7 +187,7 @@
         "ergonode/multimedia": "self.version",
         "ergonode/newrelic": "self.version",
         "ergonode/notification": "self.version",
-        "ergonode/product": "self.version",
+        "ergonode/product": "dev-main",
         "ergonode/product-collection": "1.0",
         "ergonode/reader": "self.version",
         "ergonode/segment": "self.version",
